    report parameter, since we will need it there in the future. Remove
    explicit call from bin/crash-digger and instead change check_duplicate()
    to call it on its own.
  * apport/crashdb_impl/launchpad.py, download(): Replace dodgy parsing of
    fields from the description with proper code, so that multi-line fields
    are read correctly, too.
  * apport/crashdb_impl/launchpad.py: Implement private crash bug handling,
    according to https://wiki.ubuntu.com/CrashReporting:
    - upload(): If we have an Ubuntu bug, mark it as private and only
      subscribe 'apport' (the 'Apport retracing service' user).
    - Add function _subscribe_triaging_team() which subscribes
      ubuntu-crashes-main for source packages in Ubuntu main or restricted, or
      ubuntu-crashes-universe for other packages. It does not touch non-Ubuntu
      bugs, since these are not marked private by default and are outside of
      the scope of this spec.
    - update(), _mark_dup_checked(): Call _subscribe_triaging_team().
    - Note: This entire spec is a gross hack, and Ubuntu derivatives do not
      benefit from it at all. We have to live with this until LP grows a real
      crash database.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 05 Jul 2007 23:04:26 +0200

apport (0.88) gutsy; urgency=low

  * po/de.po: Update.
  * backends/packaging-apt-dpkg.py, _search_contents(): Do not check the
    return value of zgrep. It usually errors out with 'stdout: broken pipe'
    when called with -m1.
  * bin/crash-digger: Mark a bug as retraced if DistroRelease: cannot be
    determined. Those are bugs apport cannot handle.
  * backends/packaging-apt-dpkg.py, get_source_tree(): Call apt-get source
    with --assume-yes to not block on VCS confirmations.
  * apport/crashdb.py: Add interface mark_retrace_failed(). Implement it in
    apport/crashdb_impl/launchpad.py.
  * bin/apport-retrace: If retraced report does not have a crash signature,